@@ -7,9 +7,6 @@
 // The name of the Workfow form and function, to be used in various callbacks.
 define('WORKFLOWFIELD_FORM', 'workflowfield_field_widget_form');
 
-// The definition of the Field_info property type. Shared between 'workflow_field' and 'workflow_rules'.
-define('WORKFLOWFIELD_PROPERTY_TYPE', 'text'); // 'list', 'text' or 'workflow'?
-
 module_load_include('inc', 'workflowfield', 'workflowfield.field');
 module_load_include('inc', 'workflowfield', 'workflowfield.widget');
 module_load_include('inc', 'workflowfield', 'workflowfield.formatter');
