@@ -18,7 +18,7 @@
  *   The entity whose workflow state is changing.
  * @param $force
  */
-function workflow_rules_workflow($op, $old_sid, $new_sid, $entity, $force = FALSE, $entity_type = '', $field_name = '') {
+function workflow_rules_workflow($op, $old_sid, $new_sid, $entity, $force = FALSE, $entity_type = '', $field_name = '', $transition = NULL) {
   switch ($op) {
     case 'transition post':
       // Rules are updated only after the transition of a Workflow Node status.
